[gd_scene load_steps=6 format=2]

[ext_resource path="res://title_bg_bw.png" type="Texture" id=1]
[ext_resource path="res://BalsamiqSans-Bold.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://menu_theme.tres" type="Theme" id=3]
[ext_resource path="res://TitleScreen.gd" type="Script" id=4]

[sub_resource type="DynamicFont" id=1]
size = 40
outline_size = 2
font_data = ExtResource( 2 )

[node name="TitleScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 3 )
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 40.0
margin_bottom = 40.0
rect_min_size = Vector2( 1920, 1080 )
color = Color( 0.0509804, 0.0431373, 0.0431373, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="."]
margin_right = 1920.0
margin_bottom = 40.0
rect_min_size = Vector2( 1920, 1080 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TitleBox" type="VBoxContainer" parent="CenterContainer"]
margin_left = 800.0
margin_top = 494.0
margin_right = 1120.0
margin_bottom = 585.0

[node name="Title" type="Label" parent="CenterContainer/TitleBox"]
margin_right = 320.0
margin_bottom = 48.0
rect_min_size = Vector2( 320, 40 )
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.0156863, 0.0156863, 0.00392157, 1 )
custom_colors/font_outline_modulate = Color( 1, 1, 1, 1 )
text = "Title"
align = 1

[node name="PressStart" type="Label" parent="CenterContainer/TitleBox"]
margin_top = 52.0
margin_right = 320.0
margin_bottom = 91.0
custom_colors/font_color = Color( 0.0156863, 0.0156863, 0.00392157, 1 )
text = "Press Start"
align = 1

[node name="FileSelectBox" type="NinePatchRect" parent="CenterContainer"]
modulate = Color( 1, 1, 1, 0.729412 )
margin_left = 660.0
margin_top = 340.0
margin_right = 1260.0
margin_bottom = 740.0
rect_min_size = Vector2( 600, 400 )
texture = ExtResource( 1 )
patch_margin_left = 39
patch_margin_top = 36
patch_margin_right = 39
patch_margin_bottom = 36

[node name="CenterContainer" type="CenterContainer" parent="CenterContainer/FileSelectBox"]
margin_left = 50.0
margin_top = 20.0
margin_right = 550.0
margin_bottom = 380.0
rect_min_size = Vector2( 500, 360 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SaveSlotsBox" type="VBoxContainer" parent="CenterContainer/FileSelectBox/CenterContainer"]
margin_top = 34.0
margin_right = 500.0
margin_bottom = 325.0

[node name="FileSelect" type="Label" parent="CenterContainer/FileSelectBox/CenterContainer/SaveSlotsBox"]
margin_right = 500.0
margin_bottom = 39.0
text = "File Select"
align = 1

[node name="MarginContainer" type="MarginContainer" parent="CenterContainer/FileSelectBox/CenterContainer/SaveSlotsBox"]
margin_top = 43.0
margin_right = 500.0
margin_bottom = 63.0
custom_constants/margin_top = 10
custom_constants/margin_bottom = 10

[node name="SaveFile1" type="Label" parent="CenterContainer/FileSelectBox/CenterContainer/SaveSlotsBox"]
margin_top = 67.0
margin_right = 500.0
margin_bottom = 139.0
rect_min_size = Vector2( 500, 72 )
rect_pivot_offset = Vector2( 250, 36 )
text = "save file 1"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SaveFile2" type="Label" parent="CenterContainer/FileSelectBox/CenterContainer/SaveSlotsBox"]
margin_top = 143.0
margin_right = 500.0
margin_bottom = 215.0
rect_min_size = Vector2( 500, 72 )
rect_pivot_offset = Vector2( 250, 36 )
text = "save file 2"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SaveFile3" type="Label" parent="CenterContainer/FileSelectBox/CenterContainer/SaveSlotsBox"]
margin_top = 219.0
margin_right = 500.0
margin_bottom = 291.0
rect_min_size = Vector2( 500, 72 )
rect_pivot_offset = Vector2( 250, 36 )
text = "save file 3"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ConfirmBox" type="VBoxContainer" parent="CenterContainer/FileSelectBox/CenterContainer"]
visible = false
margin_left = 106.0
margin_top = 116.0
margin_right = 394.0
margin_bottom = 243.0
rect_min_size = Vector2( 260, 95 )

[node name="Continue" type="Label" parent="CenterContainer/FileSelectBox/CenterContainer/ConfirmBox"]
margin_right = 288.0
margin_bottom = 39.0
text = "Continue?"
align = 1
valign = 1

[node name="MarginContainer" type="MarginContainer" parent="CenterContainer/FileSelectBox/CenterContainer/ConfirmBox"]
margin_top = 43.0
margin_right = 288.0
margin_bottom = 83.0
custom_constants/margin_top = 20
custom_constants/margin_bottom = 20

[node name="ChoicesBox" type="HBoxContainer" parent="CenterContainer/FileSelectBox/CenterContainer/ConfirmBox"]
margin_top = 87.0
margin_right = 288.0
margin_bottom = 127.0
rect_min_size = Vector2( 260, 40 )

[node name="Cancel" type="Label" parent="CenterContainer/FileSelectBox/CenterContainer/ConfirmBox/ChoicesBox"]
margin_right = 130.0
margin_bottom = 40.0
rect_min_size = Vector2( 130, 40 )
rect_pivot_offset = Vector2( 75, 40 )
text = "Cancel"
align = 1

[node name="MarginContainer" type="MarginContainer" parent="CenterContainer/FileSelectBox/CenterContainer/ConfirmBox/ChoicesBox"]
margin_left = 134.0
margin_right = 154.0
margin_bottom = 40.0
custom_constants/margin_right = 10
custom_constants/margin_left = 10

[node name="Ok" type="Label" parent="CenterContainer/FileSelectBox/CenterContainer/ConfirmBox/ChoicesBox"]
margin_left = 158.0
margin_right = 288.0
margin_bottom = 39.0
rect_min_size = Vector2( 130, 0 )
rect_pivot_offset = Vector2( 75, 20 )
text = "Ok"
align = 1

[node name="NavigationTimer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="SelectTimer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[connection signal="timeout" from="NavigationTimer" to="." method="_on_NavigationTimer_timeout"]
[connection signal="timeout" from="SelectTimer" to="." method="_on_SelectTimer_timeout"]
